--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,31 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-img{
-  width: 50%;
-  display: block;
-  margin: 0 auto;
+body{
+  background-image: url('images/nasa_town_hall_bam_screen-dr.png');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
-
+h1{
+  text-align: center;
+  color: #ffff;
+}
+div{
+  text-align: center;
+  height: auto;
+}
+h4{
+  color: rgb(231, 18, 18);
+  font-size: 1em;
+}
+button{
+padding:0.3em 1.2em;
+margin:0 0.3em 0.3em 0;
+border-radius:2em;
+font-family:'Roboto',sans-serif;
+color:#FFFFFF;
+background-color:#4eb5f1;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
