--- a/style.css
+++ b/style.css
@@ -10,17 +10,17 @@
   /*****************************************
   /* LAYOUT
   /*******************************************/
-  img{
-    display: none;
-    margin: 0 auto;
-    width: 100%;
-    /* height: 300px;
-    overflow: hidden; */
-  }
-  
-  iframe {
-    display: none;
-    width: 50%;
+ul {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+  li, ol {
+    font-size: 1rem;
+    font-weight: 300;
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
   }
   
   
