--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,29 +1,53 @@
 *{
   box-sizing: border-box;
 }
+
+@font-face {
+    font-family: myFirstFont;
+    src: url(Super-Plants.ttf);
+}
+  
+
 body {
-background: url(https://media1.giphy.com/media/woqvaIWdwdPBECsTQu/giphy.gif?cid=6c09b952val4l6q5lp5yngt9e4ljf7tdprb91qiki98281if&ep=v1_gifs_search&rid=giphy.gif&ct=g);
-width: 100%;
-background-size: 100%;
-margin: 0 auto;
-background-repeat: no-repeat;
-height: 100%;
-color: greenyellow;
-text-align: center;
+  background: url(https://media1.giphy.com/media/woqvaIWdwdPBECsTQu/giphy.gif?cid=6c09b952val4l6q5lp5yngt9e4ljf7tdprb91qiki98281if&ep=v1_gifs_search&rid=giphy.gif&ct=g);
+  width: 100%;
+  background-size: 100%;
+  margin: 0 auto;
+  height: 100%;
+  color: greenyellow;
+  text-align: center;
 }
 
-h1{
-  text-decoration: underline white;
+h1 {
+  padding-top: 3rem;
+  /* text-decoration: underline white; */
+  font-family: myFirstFont;
+  /* color: darkgreen !important; */
+  text-align: center;
 }
 
-h2{
+h2 {
   padding-top: 4rem;
   text-align: left;
   text-decoration: underline white;
 }
 
-h3{
+h3 {
   padding-top: 4rem;
   text-align: left;
   text-decoration: underline white;
+}
+
+#hidden {
+  display: none !important;
+}
+
+button {
+  font-family: myFirstFont !important;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
+}
+
+.table-wrapper{
+  margin: 0% 10%;
 }
