--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,20 @@
 /*******************************************/
 
 /* Box Model Hack */
-*{
-  box-sizing: border-box;
-}
-
 /* Apply border to the table */
 table {
   width: 100%;
   border-collapse: collapse;
   border: 2px solid #333;
+  background-color: #121212; 
+  color: #ffffff; 
 }
 
 /* Style table header cells */
 th {
   border: 2px solid #333;
   padding: 10px;
-  background-color: #f2f2f2;
+  background-color: #1a1a1a; 
 }
 
 /* Style table body cells */
@@ -29,8 +27,21 @@ td {
 }
 
 /* Add hover effect on table rows */
+/* Lighter background color on hover */
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: #2c2c2c; 
+}
+
+body {
+  background-color: #080808; 
+}
+
+.container {
+  margin: 20px;
+}
+
+h1 {
+  color: #00baff;
 }
 
 
